Increase polling duration and improve index readiness check
Updated polling parameters and modified waitForIndexReachable method to use bulk indexing for readiness probe.